add validation for new database fields, add rbac
