# src/models/members.js
@@ -26,6 +26,27 @@ const Member = sequelize.define('Member', {
     death_date: {
         type: DataTypes.DATEONLY,
     },
+    birth_city: {
+        type: DataTypes.STRING,
+    },
+    birth_country: {
+        type: DataTypes.STRING,
+    },
+    email: {
+        type: DataTypes.STRING,
+    },
+    telephone: {
+        type: DataTypes.STRING,
+    },
+    street_number: {
+        type: DataTypes.STRING,
+    },
+    plz: {
+        type: DataTypes.STRING,
+    },
+    city: {
+        type: DataTypes.STRING,
+    },
 }, {
     timestamps: false, // Assuming your table does not have createdAt/updatedAt columns
     tableName: 'members', // Ensure this matches your existing table name
